# neural-architectures-implementations

./: pyproject.toml
backpropagation/: derivations.ipynb  minimal_implementation.ipynb
