[project]
name = "neural-architectures-implementations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "nbconvert>=7.16.6",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
]
